# NicksWatchService

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_listing_comments.py  0003_add_listed_at.py  0004_run_llm_cost.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/adapters/: __init__.py  base.py  chrono24.py  chrono24_web.py  ebay.py  mercari_jp.py  reddit.py  web_search.py  web_search_recent.py  yahoo_jp.py
app/routers/: api.py  ui.py
app/services/: image_fetcher.py  job_runner.py  matcher.py  scheduler.py  sheets.py  watch_enricher.py
app/templates/: base.html  collection.html  index.html  runs.html
app/templates/partials/: comments.html  comments_section.html  listing_card.html  run_status_banner.html
docs/: add_adapter.md
scripts/: setup_gcp.sh  setup_tunnel.sh
tests/: test_matcher.py
